Stickit for networks tab
Change-Id: I5f95c9fd25fc4017545848e7f1c7bb133451846d

--- a/nailgun/static/templates/cluster/nova_nameservers.html
+++ b/nailgun/static/templates/cluster/nova_nameservers.html
@@ -5,10 +5,10 @@
       <div class="networks-sub-title parameter-name">Name servers</div>
       <div class="range-row clearfix">
         <label class="parameter-box clearfix">
-          <div class="parameter-control"><input type="text" value="<%- nameservers[0] %>" class="nameserver" name="nameserver-0" <%= disabled %> /></div>
+          <div class="parameter-control"><input type="text" name="nameserver-0" <%= disabled %> /></div>
         </label>
         <label class="parameter-box clearfix">
-          <div class="parameter-control"><input type="text" value="<%- nameservers[1] %>" class="nameserver" name="nameserver-1" <%= disabled %> /></div>
+          <div class="parameter-control"><input type="text" name="nameserver-1" <%= disabled %> /></div>
         </label>
         <div class="error"><span class="help-inline"></span></div>
       </div>
