--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -1537,7 +1537,7 @@ label.error {
   width: 91px;
 }
 
-.networks-table .ip_ranges > div, .neutron-parameters .ip_ranges > div {
+.networks-table .parameter-control.ip_ranges > div, .neutron-parameters .parameter-control.ip_ranges > div {
   margin-bottom: 2px;
   float: left;
 }
