--- a/nailgun/static/templates/cluster/network.html
+++ b/nailgun/static/templates/cluster/network.html
@@ -7,7 +7,6 @@
   <% var disabled = locked ? 'disabled' : '' %>
   <% var vlanManager = net_manager == 'VlanManager' ? '' : 'hide' %>
   <% var labels = {
-    'ip_ranges': $.t('cluster_page.network_tab.network_parameters.ip_range'),
     'vlan_start': $.t('cluster_page.network_tab.network_parameters.vlan_id'),
     'netmask': $.t('cluster_page.network_tab.network_parameters.netmask'),
     'gateway': $.t('cluster_page.network_tab.network_parameters.gateway'),
@@ -20,36 +19,9 @@
   <div data-network-id="<%- network.id %>" class="<%- networkName %>">
     <% var attributes = _.sortBy(_.keys(network.attributes), function(attribute) {return _.indexOf(shownAttributes, attribute)}) %>
     <% _.each(attributes, function(attribute) { %>
-      <div class="network-attribute">
+      <div class="network-attribute <%= attribute %>">
       <% var hidden = _.contains(shownAttributes, attribute) ? '' : 'hide' %>
-      <% if (attribute == 'ip_ranges') { %>
-        <div class="range-row-header <%= hidden %>">
-          <div data-i18n="cluster_page.network_tab.range_start"></div>
-          <div data-i18n="cluster_page.network_tab.range_end"></div>
-        </div>
-        <div class="networks-sub-title parameter-name range-name <%= hidden %>"><%= labels[attribute] %></div>
-        <% _.each(network.get(attribute), function(ip_range) { %>
-          <div class="range-row ip-range-row clearfix <%= hidden %>">
-            <label class="parameter-box clearfix setting">
-              <div class="parameter-control <%- attribute %>">
-                <input type="text" name="<%- attribute %>-start" placeholder="127.0.0.1" value="<%- _.first(ip_range) %>" <%= disabled %> />
-              </div>
-            </label>
-            <label class="parameter-box clearfix setting">
-            <div class="parameter-control <%- attribute %>">
-              <input type="text" name="<%- attribute %>-end" placeholder="127.0.0.1" value="<%- _.last(ip_range) %>" <%= disabled %> />
-            </div>
-            </label>
-            <div class="ip-ranges-control">
-              <button class="btn btn-link ip-ranges ip-ranges-add" <%= disabled %>><i class="icon-plus-circle"></i></button>
-            </div>
-            <div class="ip-ranges-control <%= network.get(attribute).length > 1 ? '' : 'hide' %>">
-              <button class="btn btn-link ip-ranges ip-ranges-delete" <%= disabled %>><i class="icon-minus-circle"></i></button>
-            </div>
-            <div class="error"><span class="help-inline"></span></div>
-          </div>
-        <% }) %>
-      <% } else if (_.contains(['netmask', 'gateway', 'cidr', 'amount'], attribute)) { %>
+      <% if (_.contains(['netmask', 'gateway', 'cidr', 'amount'], attribute)) { %>
           <label class="parameter-box clearfix setting <%= hidden %> <%= vlanManager && attribute == 'amount' ? 'hide' : '' %>">
             <div class="networks-sub-title parameter-name"><%= labels[attribute] %></div>
             <div class="parameter-control <%- attribute %>">
