--- a/nailgun/static/templates/cluster/network.html
+++ b/nailgun/static/templates/cluster/network.html
@@ -7,7 +7,6 @@
   <% var disabled = locked ? 'disabled' : '' %>
   <% var vlanManager = net_manager == 'VlanManager' ? '' : 'hide' %>
   <% var labels = {
-    'ip_ranges': $.t('cluster_page.network_tab.network_parameters.ip_range'),
     'vlan_start': $.t('cluster_page.network_tab.network_parameters.vlan_id'),
     'netmask': $.t('cluster_page.network_tab.network_parameters.netmask'),
     'gateway': $.t('cluster_page.network_tab.network_parameters.gateway'),
@@ -20,40 +19,20 @@
   <div data-network-id="<%- network.id %>" class="<%- networkName %>">
     <% var attributes = _.sortBy(_.keys(network.attributes), function(attribute) {return _.indexOf(shownAttributes, attribute)}) %>
     <% _.each(attributes, function(attribute) { %>
-      <div class="network-attribute">
+      <div class="network-attribute <%= attribute %>">
       <% var hidden = _.contains(shownAttributes, attribute) ? '' : 'hide' %>
       <% if (attribute == 'ip_ranges') { %>
         <div class="range-row-header <%= hidden %>">
-          <div data-i18n="cluster_page.network_tab.range_start"></div>
-          <div data-i18n="cluster_page.network_tab.range_end"></div>
+        <div data-i18n="cluster_page.network_tab.range_start"></div>
+        <div data-i18n="cluster_page.network_tab.range_end"></div>
         </div>
-        <div class="networks-sub-title parameter-name range-name <%= hidden %>"><%= labels[attribute] %></div>
-        <% _.each(network.get(attribute), function(ip_range) { %>
-          <div class="range-row ip-range-row clearfix <%= hidden %>">
-            <label class="parameter-box clearfix setting">
-              <div class="parameter-control <%- attribute %>">
-                <input type="text" name="<%- attribute %>-start" placeholder="127.0.0.1" value="<%- _.first(ip_range) %>" <%= disabled %> />
-              </div>
-            </label>
-            <label class="parameter-box clearfix setting">
-            <div class="parameter-control <%- attribute %>">
-              <input type="text" name="<%- attribute %>-end" placeholder="127.0.0.1" value="<%- _.last(ip_range) %>" <%= disabled %> />
-            </div>
-            </label>
-            <div class="ip-ranges-control">
-              <button class="btn btn-link ip-ranges ip-ranges-add" <%= disabled %>><i class="icon-plus-circle"></i></button>
-            </div>
-            <div class="ip-ranges-control <%= network.get(attribute).length > 1 ? '' : 'hide' %>">
-              <button class="btn btn-link ip-ranges ip-ranges-delete" <%= disabled %>><i class="icon-minus-circle"></i></button>
-            </div>
-            <div class="error"><span class="help-inline"></span></div>
-          </div>
-        <% }) %>
+        <div class="networks-sub-title parameter-name range-name <%= hidden %>" data-i18n="cluster_page.network_tab.network_parameters.ip_range"></div>
+        <div class="ip-ranges-rows <%= hidden %>"></div>
       <% } else if (_.contains(['netmask', 'gateway', 'cidr', 'amount'], attribute)) { %>
           <label class="parameter-box clearfix setting <%= hidden %> <%= vlanManager && attribute == 'amount' ? 'hide' : '' %>">
             <div class="networks-sub-title parameter-name"><%= labels[attribute] %></div>
             <div class="parameter-control <%- attribute %>">
-              <input type="text" class="<%= !vlanManager && attribute == 'amount' ? 'range' : '' %>" name="<%- networkName %>-<%- attribute %>" value="<%- network.get(attribute) %>" <%= disabled %> />
+              <input type="text" class="<%= !vlanManager && attribute == 'amount' ? 'range' : '' %>" name="<%- networkName %>-<%- attribute %>" value="" <%= disabled %> />
             </div>
             <div class="error"><span class="help-inline"></span></div>
           </label>
@@ -67,10 +46,10 @@
             <div class="networks-sub-title parameter-name"><%= labels.vlan_range %></div>
             <div class="range-row">
               <div class="parameter-control vlan_start">
-                <input type="text" class="mini range" name="<%- networkName %>-<%- attribute %>" value="<%- network.get(attribute) %>" <%= disabled %> />
+                <input type="text" class="vlan mini range" name="<%- networkName %>-<%- attribute %>" value="" <%= disabled %> />
               </div>
               <div class="parameter-control vlan_end">
-                <input type="text" class="mini" name="<%- networkName %>-vlan_end" value="<%= network.get(attribute) + network.get('amount') - 1 %>" disabled />
+                <input type="text" class="mini" name="<%- networkName %>-vlan_end" value="" disabled />
               </div>
               <div class="error"><span class="help-inline"></span></div>
             </div>
@@ -83,14 +62,14 @@
             <label class="parameter-box clearfix setting">
               <div class="parameter-control">
                 <div class="custom-tumbler">
-                  <input type="checkbox" class="use-vlan-tagging" <%= _.isNull(vlan) ? '' : 'checked' %> <%= isFloating || disabled %>>
+                  <input type="checkbox" class="use-vlan-tagging" <%= isFloating || disabled %>>
                   <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
                 </div>
               </div>
             </label>
             <label class="parameter-box clearfix setting">
-              <div class="parameter-control <%- attribute %>" <%= _.isNull(vlan) ? 'style="display:none"' : '' %>>
-                <input type="text" value="<%- _.isNull(vlan) ? '' : vlan %>" name="<%- networkName %>-<%- attribute %>" class="vlan-tagging" <%= isFloating || disabled %>>
+              <div class="parameter-control <%- attribute %>">
+                <input type="text" value="" name="<%- networkName %>-<%- attribute %>" class="vlan vlan-tagging" <%= isFloating || disabled %>>
               </div>
             </label>
             <div class="error"><span class="help-inline"></span></div>
@@ -100,11 +79,7 @@
         <label class="parameter-box clearfix setting <%= hidden %> <%= vlanManager %>">
           <div class="networks-sub-title parameter-name"><%= labels[attribute] %></div>
           <div class="parameter-control <%- attribute %>">
-            <select name="<%- networkName %>-<%- attribute %>" <%= disabled %>>
-              <% _.each([8, 16, 32, 64, 128, 256, 512, 1024, 2048], function(size) { %>
-                <option value="<%= size %>" <%= network.get('network_size') == size ? 'selected' : '' %>><%= size %></option>
-              <% }) %>
-            </select>
+            <select name="<%- networkName %>-<%- attribute %>" <%= disabled %>></select>
           </div>
           <div class="error"><span class="help-inline"></span></div>
         </label>
