Redesign Interfaces Bonding
Change-Id: Id7f72ed98e073f0c5cc929b978641cf6e0ed8f10

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1,9 +1,10 @@
 @import 'fonticon.css';
 @import 'bootstrap.css';
 @import 'retina.less';
+@import 'bonding.css';
 
 // Basis
-// -------------------------
+// -------------------------
 
 // Global colors
 // --------------------------------------------------
