--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -3,7 +3,7 @@
 @import 'retina.less';
 
 // Basis
-// -------------------------
+// -------------------------
 
 // Global colors
 // --------------------------------------------------
@@ -263,6 +263,9 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+
+::selection {background: #fff2a8; }
+::-moz-selection {background: #fff2a8; }
 
 button {
   font-family: @font-family-base;
@@ -2808,15 +2811,19 @@ hr.slim {
   &.nodrag {
     opacity: 0.7;
     .network-box-item {
-      border-color: red;
+      border-color: @fuel-dark-red;
       background-color: #F2DEDE;
     }
   }
 }
 
 .network-box-name {
-  margin-left: 20px;
+  border-bottom: 1px dotted #999999;
   font-size: 16px;
+  padding: 8px 15px;
+  label {
+    margin: 0;
+  }
 }
 
 .network-box-item {
@@ -2837,7 +2844,7 @@ hr.slim {
 
 .network-info-box {
   display: block;
-  width: 290px;
+  width: 305px;
   min-height: 44px;
   float: left;
   margin: 17px 0px 0px 20px;
@@ -2846,13 +2853,13 @@ hr.slim {
 
 .network-interfaces-status {
   display: block;
-  .width-height-size(54px, 43px);
-  background: #bbbbbb;
+  .width-height-size(54px, 58px);
+  background: @fuel-grey-lighter;
   padding: 0px;
   border-radius: 4px;
   overflow: hidden;
   float: left;
-  margin-right: 20px;
+  margin: 10px 20px 0px 0px;
 }
 
 .interface-online, .interface-offline {
@@ -2863,6 +2870,7 @@ hr.slim {
   display: inline-block;
   text-decoration: inherit;
   width: 0em;
+  height: 17px;
   margin-right: 0em;
   text-align: center;
   font-variant: normal;
@@ -2872,7 +2880,7 @@ hr.slim {
   font-size: 34px;
   padding-top: 22px;
   padding-left: 11px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+  text-shadow: @text-shadow-white;
 }
 
 .interface-online:before {
@@ -2898,6 +2906,91 @@ hr.slim {
     line-height: 0;
     content: "";
   }
+}
+
+.network-bond-name-checkbox {
+    margin: 3px 12px 0 0;
+}
+
+.network-bond-name {
+  margin-top: 5px;
+  font-size: 16px;
+  color: @fuel-dark-gray-darker;
+  text-shadow: @text-shadow-white;
+}
+
+.network-bond-mode {
+  font-size: 13px;
+  margin: 2px 0px 0px 20px;
+  text-shadow: @text-shadow-white;
+  > b {
+    color: #555555;
+  }
+  select {
+    width: 120px;
+    margin-top: -4px;
+    margin-bottom: 0px;
+  }
+}
+
+.network-bond-status {
+  font-size: 13px;
+  margin: 2px 0px 0px 20px;
+  text-shadow: @text-shadow-white;
+  > b {
+    color: #555555;
+  }
+}
+
+.physical-network-checkbox {
+  display: block;
+  float: left;
+  padding: 23px 0 0 15px;
+  width: 52px;
+  .box-sizing-mixin;
+}
+
+.network-connections-block {
+  display: block;
+  float: left;
+  width: 54px;
+  margin-bottom: 8px;
+  .box-sizing-mixin;
+}
+
+.network-interfaces-name {
+  color: #505050;
+  font-size: @font-size-base - 3;
+  font-weight: bold;
+  margin: 0;
+  line-height: 16px;
+  text-align: center;
+  text-shadow: @text-shadow-white;
+}
+
+.network-connections-info-block {
+  display: block;
+  float: left;
+  width: 266px;
+  .box-sizing-mixin;
+}
+
+.network-connections-info-block-item {
+  display: block;
+  height: 58px;
+  overflow: hidden;
+  margin: 10px 0px 0px 10px;
+}
+
+.network-connections-info-position {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.network-connections-info-description {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .logical-network-group {
