--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1,9 +1,10 @@
 @import 'fonticon.css';
 @import 'bootstrap.css';
 @import 'retina.less';
+@import 'bonding.css';
 
 // Basis
-// -------------------------
+// -------------------------
 
 // Global colors
 // --------------------------------------------------
@@ -2815,7 +2816,6 @@ hr.slim {
 }
 
 .network-box-name {
-  margin-left: 20px;
   font-size: 16px;
 }
 
@@ -2846,7 +2846,7 @@ hr.slim {
 
 .network-interfaces-status {
   display: block;
-  .width-height-size(54px, 43px);
+  .width-height-size(54px, 58px);
   background: #bbbbbb;
   padding: 0px;
   border-radius: 4px;
@@ -2863,6 +2863,7 @@ hr.slim {
   display: inline-block;
   text-decoration: inherit;
   width: 0em;
+  height: 17px;
   margin-right: 0em;
   text-align: center;
   font-variant: normal;
