--- a/nailgun/static/templates/cluster/node_interface.html
+++ b/nailgun/static/templates/cluster/node_interface.html
@@ -1,11 +1,75 @@
-<!-- network block start -->
+<div class="clearfix"></div>
+
+<% var slaveInterfaces = [] %>
 <div class="physical-network-box" data-name="<%- ifc.get('name') %>">
-  <div class="network-box-name"><%- ifc.get('name') %></div>
   <div class="network-box-item">
-    <div class="network-info-box enable-selection">
-      <div class="network-interfaces-status"><div class="interface-<%= ifc.get('state') !== 'down' ? 'online' : 'offline'%>"></div></div>
-      <div>MAC: <%- ifc.get('mac') %></div>
-      <div><%- $.t('cluster_page.nodes_tab.configure_interfaces.speed') %>: <%- showBandwidth(ifc.get('current_speed')) %></div>
+    <% if (ifc.isBond()) { %>
+      <% slaveInterfaces = [ifc] %>
+      <div class="network-box-name">
+        <div class="pull-left">
+          <label>
+            <div class="custom-tumbler network-bond-name-checkbox">
+              <input type="checkbox">
+              <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
+            </div>
+          </label>
+        </div>
+        <div class="network-bond-name pull-left"><%- ifc.get('name') %></div>
+        <div class="network-bond-mode pull-right">
+          <b>Hash policy:</b>
+          <span>
+            <select name="fixed-network_size" style="width: 120px; margin-top: -4px; margin-bottom: 0px;">
+              <option selected  value="8">Layer2</option>
+              <option value="16">Layer2+3</option>
+              <option value="32">Layer2+5</option>
+            </select>
+          </span>
+        </div>
+        <div class="network-bond-mode pull-right">
+          <b>Mode:</b>
+          <span>
+            <select name="fixed-network_size" style="width: 120px; margin-top: -4px; margin-bottom: 0px;">
+              <option selected  value="8">balance-rr</option>
+              <option value="16">balance-xor</option>
+              <option value="32">802.3ag</option>
+            </select>
+          </span>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="physical-network-checkbox"></div>
+    <% } else { %>
+      <% slaveInterfaces = [ifc] %>
+      <div class="physical-network-checkbox">
+        <label>
+          <div class="custom-tumbler">
+            <input type="checkbox">
+            <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
+          </div>
+        </label>
+      </div>
+    <% } %>
+
+    <div class="network-connections-block">
+      <% _.each(slaveInterfaces, function(slaveInterface) { %>
+        <div class="network-interfaces-status">
+          <div class="interface-<%= ifc.get('state') != 'down' ? 'online' : 'offline'%>"></div>
+          <div class="network-interfaces-name"><%- ifc.get('name') %></div>
+        </div>
+      <% }) %>
+    </div>
+
+    <div class="network-connections-info-block">
+      <% _.each(slaveInterfaces, function(slaveInterface) { %>
+        <div class="network-connections-info-block-item">
+          <div class="network-connections-info-position"></div>
+          <div class="network-connections-info-description">
+            <div>MAC: <%- ifc.get('mac') %></div>
+            <div><%- $.t('cluster_page.nodes_tab.configure_interfaces.speed') %>: <%- showBandwidth(ifc.get('current_speed')) %></div>
+          </div>
+        </div>
+      <% }) %>
     </div>
 
     <div class="logical-network-box">
@@ -36,5 +100,4 @@
     </div>
   </div>
 </div>
-<!-- network block end -->
 <div class="network-box-error-message common enable-selection">&nbsp;</div>
