Hot fix for hasChanges function causing tests failure
Change-Id: I712abb487f990380c2f7c3a82b6403a894fc12ec

--- a/nailgun/static/templates/cluster/healthcheck_tests.html
+++ b/nailgun/static/templates/cluster/healthcheck_tests.html
@@ -5,7 +5,8 @@
     <td class="healthcheck-col-select">
       <div class="custom-tumbler">
         <label>
-          <input type="checkbox" class="test-select" id="test-select-<%- test.get('testset') %>-<%= testIndex %>">
+          <input type="checkbox" class="test-select" id="test-select-<%- test.get('testset') %>-<%= testIndex %>"
+                 data-id="<%- test.get('id') %>">
           <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
         </label>
       </div>
