Fixes UI loading: tab titles
Closes-Bug: #1259192

Change-Id: I44828f1e51a348d4c8f2e772bc6fcd0d16e714cd

--- a/nailgun/static/templates/cluster/page.html
+++ b/nailgun/static/templates/cluster/page.html
@@ -6,7 +6,7 @@
       <li class="<%= activeTab == tab.url ? 'active' : '' %>">
         <a href="#cluster/<%= cluster.id %>/<%= tab.url %>">
           <b class="tab-<%= tab.url %>-normal"></b>
-          <div class="tab-title"><%= tab.title %></div>
+          <div class="tab-title"><%- $.t('cluster_page.tabs.' + tab.url) %></div>
         </a>
       </li>
     <% }) %>
