Separate OSTF tests running
Change-Id: I712abb487f990380c2f7c3a82b6403a894fc12ec

--- a/nailgun/static/templates/cluster/healthcheck_tests.html
+++ b/nailgun/static/templates/cluster/healthcheck_tests.html
@@ -1,9 +1,20 @@
-<% tests.each(function(test) { %>
+<% tests.each(function(test, testIndex) { %>
   <% var result = testrun && _.find(testrun.get('tests'), {id: test.id}) %>
   <% var status = result && result.status || 'unknown' %>
   <tr>
+    <td class="healthcheck-col-select">
+      <div class="custom-tumbler">
+        <label>
+          <input type="checkbox" class="test-select" id="test-select-<%- test.get('testset') %>-<%= testIndex %>"
+                 data-id="<%- test.get('id') %>">
+          <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
+        </label>
+      </div>
+    </td>
     <td>
-      <div class="healthcheck-name"><%- test.get('name') %></div>
+      <div class="healthcheck-name">
+        <label for="test-select-<%- test.get('testset') %>-<%= testIndex %>"><%- test.get('name') %></label>
+      </div>
       <% if (status == 'failure' || status == 'error' || status == 'skipped') { %>
         <div class="healthcheck-msg healthcheck-status-failure">
           <% if (result && result.message) { %>
