--- a/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/additional.html
@@ -1,6 +1,6 @@
-<% if (disabled && release) { %>
+<% if (disabledDueToRelease && release) { %>
   <div class="alert" style="margin-bottom: 10px">
-      <%- $.t("dialog.create_cluster_wizard.additional.alert", { releaseName: release.get('name')} ) %>
+      <%- $.t("dialog.create_cluster_wizard.additional.release_alert", {releaseName: release.get('name')}) %>
   </div>
 <% } %>
 <form class="form-horizontal" style="margin:0" onsubmit="return false">
