--- a/nailgun/static/templates/cluster/page.html
+++ b/nailgun/static/templates/cluster/page.html
@@ -1,20 +1,29 @@
 <div class="deployment-result"></div>
 <div class="customization-message"></div>
 <div class="whitebox">
-  <ul class="nav nav-tabs cluster-tabs">
-    <% _.each(tabs, function(tab) { %>
-      <li class="<%= activeTab == tab ? 'active' : '' %>">
-        <a href="#cluster/<%= cluster.id %>/<%= tab %>">
-          <b class="tab-<%= tab %>-normal"></b>
-          <div class="tab-title"><%- $.t('cluster_page.tabs.' + tab) %></div>
-        </a>
-      </li>
-    <% }) %>
-    <li class="pull-right deployment-control"></li>
-  </ul>
-  <div class="tab-content">
-    <% _.each(tabs, function(tab) { %>
-      <div class="tab-pane <%= activeTab == tab ? 'active' : '' %>" id="tab-<%= tab %>"></div>
-    <% }) %>
-  </div>
+    <ul class="nav nav-tabs cluster-tabs">
+
+        <% _.each(tabs, function(tab) { %>
+        <li class="<%= activeTab == tab ? 'active' : '' %>">
+            <a href="#cluster/<%= cluster.id %>/<%= tab %>">
+                <b class="tab-<%= tab %>-normal"></b>
+
+                <div class="tab-title"><%- $.t('cluster_page.tabs.' + tab) %></div>
+            </a>
+        </li>
+        <% }) %>
+
+        <!--Think how to deal with this later-->
+        <% if (tabs.length > 10) { %>
+            <div class="cluster-tabs-more">
+                <i class="icon-plus"></i>
+            </div>
+        <% } %>
+
+    </ul>
+    <div class="tab-content">
+        <% _.each(tabs, function(tab) { %>
+        <div class="tab-pane <%= activeTab == tab ? 'active' : '' %>" id="tab-<%= tab %>"></div>
+        <% }) %>
+    </div>
 </div>
