Redesign Tabs Layout
Change-Id: Ibfd8ef2f160296abd06c4214d76cc266718ec331

--- a/nailgun/static/templates/common/breadcrumb.html
+++ b/nailgun/static/templates/common/breadcrumb.html
@@ -9,3 +9,84 @@
     <% } %>
   <% }) %>
 </ul>
+
+<div class="row-fluid">
+	<div class="span8">
+  		
+  		<!-- code -->
+  		<div class="cluster-name-box">
+      			<div class="node-list-name">
+        
+          				<ul class="cluster-details dropdown-menu" style="display: none; color: #ffffff;">
+            				<li><strong data-i18n="cluster_page.openstack_release">OpenStack Release:</strong>Havana on CentOS 6.4</li>
+            				<li><strong data-i18n="cluster_page.environment_status">Environment Status:</strong>New</li>
+            				<li><strong data-i18n="cluster_page.deployment_mode">Environment Deployment Mode:</strong>Multi-node</li>
+          				</ul>
+          				<i class="icon-info-circled text-info btn-cluster-details"></i>
+          				<span class="btn-cluster-details">Just a longest environment name</span>
+      			</div>
+      			<div class="node-list-name-count">(6 nodes)</div>
+    		</div>
+  		<!-- code -->
+
+	</div>
+	<div class="span4">
+
+		<!-- code -->
+		<div class="pull-right deployment-control">
+				<div class="pull-right deployment-control-box">
+    					<div class="deployment-control-item-box">
+    						<button class="deploy-btn "><i class="icon-upload-cloud"></i> Deploy Changes</button>
+    					</div>
+    					<div class="deployment-control-item-box">
+    						<button title="Discard Changes" role="button" class="btn rollback"><i class="icon-back-in-time"></i></button>
+    					</div>
+    				</div>
+		</div>
+		<!-- code -->
+  		
+	</div>
+</div>
+
+<div class="row-fluid">
+  <div class="span8">
+      
+      <!-- code -->
+      <div class="cluster-name-box">
+            <div class="node-list-name">
+        
+                  <ul class="cluster-details dropdown-menu" style="display: none; color: #ffffff;">
+                    <li><strong data-i18n="cluster_page.openstack_release">OpenStack Release:</strong>Havana on CentOS 6.4</li>
+                    <li><strong data-i18n="cluster_page.environment_status">Environment Status:</strong>New</li>
+                    <li><strong data-i18n="cluster_page.deployment_mode">Environment Deployment Mode:</strong>Multi-node</li>
+                  </ul>
+                  <i class="icon-info-circled text-info btn-cluster-details"></i>
+                  <span class="btn-cluster-details">Just a longest environment name</span>
+            </div>
+            <div class="node-list-name-count">(6 nodes)</div>
+        </div>
+      <!-- code -->
+
+  </div>
+  <div class="span4">
+
+    <!-- code -->
+    <div class="pull-right deployment-progress-box progress-bar-container">
+        <div class="deployment-control-item-box">
+            <div class="deploying-progress-text-box percentage">29%</div>
+        </div>
+        <div class="deployment-control-item-box">
+            <div class="progress progress-success progress-striped progress-deploy active">
+                <div class="bar" style="width: 29%;"></div>
+            </div>
+        </div>
+        <div class="deployment-control-item-box">
+            <div class="deploying-progress-text-box"></div>
+        </div>
+        <div class="progress-bar-description"></div>
+    </div>
+
+    <!-- code -->
+      
+  </div>
+</div>
