--- a/nailgun/static/templates/cluster/page.html
+++ b/nailgun/static/templates/cluster/page.html
@@ -10,7 +10,12 @@
         </a>
       </li>
     <% }) %>
-    <li class="pull-right deployment-control"></li>
+
+    <div class="cluster-tabs-more">
+    <i class="icon-plus"></i>
+    </div>
+    
+    
   </ul>
   <div class="tab-content">
     <% _.each(tabs, function(tab) { %>
