--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -3811,3 +3811,137 @@ i.btn-cluster-details {
   margin-left: -380px;
   min-height: 485px;
 }
+
+/* Fencing Styles */
+
+.fencing-agent-block {
+    .box-sizing-mixin;
+    background-color: @fuel-lightergrey;
+    border: 1px solid @fuel-grey-dark;
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 10px;
+    &:hover {
+    background-color: @fuel-lightgrey;
+    cursor: pointer;
+    }
+}
+
+.fencing-agent-open {
+    background-color: @fuel-lightgrey;
+    cursor: default !important;
+}
+
+.fencing-agent-select {
+    display: block;
+    float: left;
+    height: 52px;
+    padding: 10px 0 0 12px;
+    width: 50px;
+    .box-sizing-mixin;
+}
+
+.fencing-controller-btn {
+    color: #61C161;
+    display: block;
+    font-size: 22px;
+    margin-top: 5px;
+    overflow: hidden;
+    width: 30px;
+    height: 30px;
+    padding: 0px;
+    &:hover {
+    color: #51A451;
+    }
+}
+
+.fencing-agent-name {
+    float: left;
+    font-size: 16px;
+    height: 52px;
+    min-width: 120px;
+    overflow: hidden;
+    padding: 15px 20px 0px 0px;
+    .box-sizing-mixin;
+}
+
+.fencing-agent-description {
+    float: left;
+    font-size: 12px;
+    height: 36px;
+    max-width: 800px;
+    overflow: hidden;
+    padding: 16px 0px 0px 0px;
+    color: #999999;
+    .box-sizing-mixin;
+}
+
+.fencing-agent-settings-block {
+    display: block;
+    width: 100%;
+    min-height: 100px;
+    border-top: 1px dotted #999999;
+    /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15) inset; */
+}
+
+.fencing-agent-controller-info {
+    float: left;
+    width: 400px;
+    margin: 20px 10px 0px 50px;
+}
+
+.fencing-agent-controller-name {
+    display: block;
+    font-size: 16px;
+    color: @fuel-dark-middle;
+}
+
+.fencing-agent-controller-description {
+    display: block;
+    font-size: 11px;
+    color: @fuel-dark;
+}
+
+.fencing-agent-controller-settings {
+    float: left;
+    margin: 20px 10px 0px 10px;
+}
+
+.fencing-agent-controller-checkbox-position {
+    margin-left: 160px;
+    width: 200px;
+}
+
+.fencing-agent-controller-checkbox {
+    display: block;
+    float: left;    
+}
+
+.fencing-agent-controller-checkbox-label {
+    display: block;
+    float: left;
+    margin-left: 6px;
+    margin-top: 6px;
+}
+
+.fencing-agent-controller-checkbox-label span {
+    border-bottom: 1px dotted #AFAFAF;
+    color: #4A4A4A;
+    display: inline;
+    font-size: 15px;
+    font-weight: normal;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
+    cursor: pointer;
+    &:hover {
+    color: #0178b3;
+    border-bottom: 1px dotted #0178b3;
+    }
+}
+
+.fencing-agent-controller-checkbox-edit {
+    display: inline-block;
+    font-size: 15px;
+    font-weight: normal;
+    margin-top: -6px;
+}
