Fixes IP ranges controls
Closes-Bug: #1271488

Change-Id: Ia0029c2bf8cf8c7e3138a4fadf71da91c7ef1637

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1499,6 +1499,10 @@ label.error {
   margin-left: 0 !important;
 }
 
+.networks-table .ip-ranges-control .btn-link {
+  padding: 0;
+}
+
 .networks-table .ip-ranges, .neutron-parameters .nameservers-row button {
   padding: 0;
 }
