--- a/nailgun/static/templates/cluster/neutron_parameters.html
+++ b/nailgun/static/templates/cluster/neutron_parameters.html
@@ -1,10 +1,10 @@
 <% var disabled = locked ? 'disabled' : '' %>
 <div>
-  <legend class="networks" data-i18n="cluster_page.network_tab.neutron.l2_configuration"></legend>
+  <legend class="networks" data-i18n="cluster_page.network_tab.network_parameters.l2_configuration"></legend>
   <div>
     <div class="network-attribute">
       <div class="range-row-header mini"><div data-i18n="cluster_page.network_tab.range_start"></div><div data-i18n="cluster_page.network_tab.range_end"></div></div>
-      <div class="networks-sub-title parameter-name"><span><%- $.t('cluster_page.network_tab.neutron.' + segmentation + '_id_range') %></span></div>
+      <div class="networks-sub-title parameter-name"><span><%- $.t('cluster_page.network_tab.network_parameters.' + segmentation + '_id_range') %></span></div>
       <div class="range-row clearfix">
         <label class="parameter-box clearfix">
           <div class="parameter-control"><input type="text" value="" class="mini neutronId" name="id0" <%= disabled %> /></div>
@@ -17,7 +17,7 @@
     </div>
     <div class="network-attribute">
       <label class="parameter-box clearfix setting">
-        <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.neutron.base_mac"></div>
+        <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.network_parameters.base_mac"></div>
         <div class="parameter-control"><input type="text" name="base_mac" <%= disabled %> /></div>
         <div class="error validation-error"><span class="help-inline"></span></div>
       </label>
@@ -25,31 +25,31 @@
   </div>
 </div>
 <div>
-  <legend class="networks" data-i18n="cluster_page.network_tab.neutron.l3_configuration"></legend>
+  <legend class="networks" data-i18n="cluster_page.network_tab.network_parameters.l3_configuration"></legend>
   <div>
-    <div class="range-row-header" data-i18n="cluster_page.network_tab.neutron.external_network"></div>
+    <div class="range-row-header" data-i18n="cluster_page.network_tab.network_parameters.external_network"></div>
     <div class="network-attribute">
       <div class="range-row-header"><div data-i18n="cluster_page.network_tab.range_start"></div><div data-i18n="cluster_page.network_tab.range_end"></div></div>
-      <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.neutron.floaing_ip"></div>
+      <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.network_parameters.floaing_ip"></div>
       <div class="floating-row"></div>
     </div>
-    <div class="range-row-header" data-i18n="cluster_page.network_tab.neutron.internal_network"></div>
+    <div class="range-row-header" data-i18n="cluster_page.network_tab.network_parameters.internal_network"></div>
     <div class="network-attribute">
       <label class="parameter-box clearfix setting">
-        <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.neutron.cidr"></div>
+        <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.network_parameters.cidr"></div>
         <div class="parameter-control"><input type="text" name="cidr-int" <%= disabled %> /></div>
         <div class="error validation-error"><span class="help-inline"></span></div>
       </label>
     </div>
     <div class="network-attribute">
       <label class="parameter-box clearfix setting">
-        <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.neutron.gateway"></div>
+        <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.network_parameters.gateway"></div>
         <div class="parameter-control"><input type="text" name="gateway" <%= disabled %> /></div>
         <div class="error validation-error"><span class="help-inline"></span></div>
       </label>
     </div>
     <div class="network-attribute">
-      <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.neutron.name_servers"></div>
+      <div class="networks-sub-title parameter-name" data-i18n="cluster_page.network_tab.network_parameters.name_servers"></div>
       <div class="nameservers-row"></div>
     </div>
   </div>
