--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1476,7 +1476,10 @@ label.error {
     margin-bottom: 0;
     float: left;
   }
-  div.error { float: left; }
+  div.error {
+    float: left;
+    max-width: 280px;
+  }
   .error .help-inline {
     display: block;
     padding-top: 5px;
