Create cluster wizard height fix
 making wizard height bigger to fit additional services

Change-Id: I50fa04a6b9cf5c85828c1b345780f9dccadb5f45
Closes-bug: 1275666

--- a/nailgun/static/templates/dialogs/create_cluster_wizard/storage.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/storage.html
@@ -1,5 +1,5 @@
 <% if (disabled && release) { %>
-  <div class="alert" style="margin:0"><%- $.t("dialog.create_cluster_wizard.storage.alert", { releaseName: release.get('name')} ) %> </div>
+  <div class="alert" style="margin:0"><%- $.t(warningMessage, { releaseName: release.get('name')} ) %> </div>
 <% } %>
 <form class="form-horizontal" style="margin:0" onsubmit="return false">
   <fieldset>
