--- a/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
@@ -1,17 +1,11 @@
 <% if (disabledDueToRelease && release) { %>
   <div class="alert" style="margin:0">
-      <%- $.t("dialog.create_cluster_wizard.network.alert", { releaseName: release.get('name')} ) %>
+      <%- $.t(warningMessage, { releaseName: release.get('name')} ) %>
   </div>
 <% } %>
 <form class="form-horizontal" onsubmit="return false">
   <fieldset>
     <div class="control-group">
-      <% var managers = ['nova-network', 'neutron-gre', 'neutron-vlan'] %>
-      <% var descriptions = {
-        'nova-network': $.t("dialog.create_cluster_wizard.network.nova_network"),
-        'neutron-gre': $.t("dialog.create_cluster_wizard.network.neutr_gre"),
-        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan")
-      } %>
       <% _.each(managers, function(manager) { %>
         <label class="parameter-box clearfix">
           <div class="parameter-control">
