--- a/nailgun/static/templates/dialogs/create_cluster_wizard.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard.html
@@ -7,10 +7,9 @@
   <div class="wizard-steps-box">
     <div class="wizard-steps-nav">
       <ul class="wizard-step-nav-item">
-        <% _(totalSteps).times(function(step) { %>
+        <% _(panesTitles.length).times(function(step) { %>
           <% step++ %>
-          <li class="wizard-step <%= step != currentStep ? step <= maxAvailableStep ? 'available' : '' : 'current' %>" data-pane="<%= step - 1 %>">
-            <%- $.t(panes[step - 1].title) || ('Step ' + step)%>
+          <li class="wizard-step" data-pane="<%= step - 1 %>" data-i18n="<%- panesTitles[step-1] || ('Step ' + step) %>">
           </li>
         <% }) %>
       </ul>
