--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -11,6 +11,7 @@
 @fuel-white-color: #ffffff;
 @fuel-white-grey: #f5f5f5;
 @fuel-lightgrey: #e0e0e0;
+@fuel-lightergrey: #f0f0f0;
 @fuel-grey-light-lighter: #d9d9d9;
 @fuel-grey-light: #d5d5d5;
 @fuel-grey-sub-light: #d0d0d0;
@@ -388,7 +389,7 @@ h6.page-title {
 .footer-copyright {
   display: block;
   padding: 14px 20px 0px 20px;
-  color: #f0f0f0;
+  color: @fuel-lightergrey;
   font-size: 11px;
   margin-top: 0px;
 }
@@ -1347,7 +1348,7 @@ label.error {
 }
 
 .wizard-steps-nav {
-  background-color: #f0f0f0;
+  background-color: @fuel-lightergrey;
   display: block;
   width: 25%;
   overflow: hidden;
@@ -1546,10 +1547,6 @@ input.vlan-tagging {
   margin: 0 20px;
   padding-left: 3px;
   h3 { margin-top: 0; }
-}
-
-.display-changes-dialog > ul {
-  margin-left: 35px;
 }
 
 .pending-deletion-flag {
@@ -1845,7 +1842,7 @@ input.vlan-tagging {
   display: block;
   height: auto;
   .border-radius-mixin;
-  background-color: #f0f0f0;
+  background-color: @fuel-lightergrey;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.15);
   .margin-padding-mixin(10px 0px 0px 20px, 10px 0px 10px 0px);
   &:after {
@@ -2570,35 +2567,39 @@ input.error:focus {
   }
 }
 
-.action-item-placeholder {
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  background-color: #f0f0f0;
-  height: 160px !Important;
-  .box-sizing-mixin;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  overflow: hidden;
-  form {
-    h4 {
-      display: block;
-      height: 24px;
-      overflow: hidden;
-      .margin-padding-mixin(17px 20px 10px 20px);
-    }
-    .action-item-description {
-      display: block;
-      height: 42px;
-      overflow: hidden;
-      .margin-padding-mixin(0px 20px 0px 20px);
-    }
-    .important {
-      color: #c03832;
-      font-style: italic;
-    }
-    .action-item-controls {
-      display: block;
-      overflow: hidden;
-      .margin-padding-mixin(20px 20px 0px 20px);
+#tab-actions {
+  div.row-fluid {margin-bottom: 20px;}
+  .action-item-placeholder {
+    border: 1px solid @fuel-lightgrey;
+    border-radius: 4px;
+    background-color: @fuel-lightergrey;
+    height: 160px !important;
+    .box-sizing-mixin;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    overflow: hidden;
+    form {
+      h4 {
+        display: block;
+        height: 24px;
+        overflow: hidden;
+        .margin-padding-mixin(17px 20px 10px 20px);
+      }
+      .action-item-description {
+        display: block;
+        height: 42px;
+        overflow: hidden;
+        .margin-padding-mixin(0px 20px 0px 20px);
+      }
+      .important {
+        color: #c03832;
+        font-style: italic;
+      }
+      .action-item-controls {
+        display: block;
+        overflow: hidden;
+        .margin-padding-mixin(20px 20px 0px 20px);
+        .apply-name-btn { margin-top: -10px; }
+      }
     }
   }
 }
@@ -2745,31 +2746,25 @@ legend {
   width: 185px;
 }
 
-.deploy-task-name {
-  font-size: 13px;
-  padding: 8px 10px 1px 10px;
-  &.header {
-    font-weight: bold;
-  }
-}
-
-.deploy-task-item {
-  padding: 4px 10px;
-}
-
-.deploy-task-notice {
-  .margin-padding-mixin(0, 0px 10px);
-  color: #C03832;
-  font-style: italic;
-  text-align: center;
-}
-
 hr.slim {
   margin: 10px;
 }
 
-.display-changes-dialog .alert-error {
-  margin-top: 10px;
+.display-changes-dialog {
+  ul { margin-left: 35px; }
+  .deploy-task-name {
+    padding: 8px 10px 1px 10px;
+    &.header {
+      font-weight: bold;
+    }
+  }
+  .deploy-task-notice {
+    .margin-padding-mixin(0, 0px 10px);
+    color: #C03832;
+    font-style: italic;
+    text-align: center;
+  }
+  .alert-error { margin-top: 10px; }
 }
 
 .radio-checkbox-group {
@@ -2815,7 +2810,7 @@ hr.slim {
 
 .network-box-item {
   display: block;
-  background-color: #f0f0f0;
+  background-color: @fuel-lightergrey;
   min-height: 80px;
   border: 1px solid #999999;
   margin-left: 20px;
@@ -3076,7 +3071,7 @@ hr.slim {
   border-left: 1px solid #999999;
   border-right: 1px solid #999999;
   border-bottom: 1px solid #999999;
-  background-color: #f0f0f0;
+  background-color: @fuel-lightergrey;
   &.collapse {
     visibility: hidden;
     &.in {
